--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
           type=text
           name=link
           placeholder="Google maps link"
+          required="required"	
           pattern=".*?m?id=\w+.*?"
           id=link,
           title="Link to map must be accessible and contain map id. E.g. https://drive.google.com/open?id=1ywXVZ-3ZEAM5lLV9wLOPXl1vzjA&usp=sharing">        
