--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html >
    <head>
       <meta charset="UTF-8">
-      <title>Clean Contact Form</title>
+      <title>Google Maps to BMW NBT converter</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
       <link rel="stylesheet" href="css/style.css">
